Added the update operation
